--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,14 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>${project.parent.version}</version>
 			</plugin>
+			<plugin>
+            			<groupId>org.apache.maven.plugins</groupId>
+            			<artifactId>maven-compiler-plugin</artifactId>
+            			<configuration>
+                		<source>1.8</source>
+                		<target>1.8</target>
+            			</configuration>
+        		</plugin>
 		</plugins>
 	</build>
 
